<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FuelLogger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello git!</string>
    <string name="submit">Submit</string>
    <string name="name">Name:</string>
    <string name="primary">Set as primary vehicle</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="exampleBrand">Toyota</string>
    <string name="exampleModel">Corolla</string>
    <string name="tankSize">Tank volume</string>
    <string name="exampleTankSize">50</string>
    <string name="ifNotRegistered">Please register</string>
    <string name="register">Register</string>
    <string name="volumeMeasure">L</string>
    <string name="odometer">Odometer</string>
    <string name="hint_tank_volume">Tank volume in litre</string>
    <string name="hint_odometer">Odometer</string>
    <string name="distanceMeasure">km</string>
    <string name="databaseName">FuelLoggerDatabase.db</string>
    <string name="Odometer">Odometer</string>
    <string name="whatisodo"><u>What is odometer?</u></string>
    <string name="litre">Litre:</string>
    <string name="examplelitre">42</string>
    <string name="partial">This is a partial fill up</string>
    <string name="examplecost">546</string>
    <string name="cost">Cost:</string>
    <string name="pick_date">Pick date:</string>
    <string name="set_date">Set date:</string>
    <string name="tracking_notification_title">Tracking</string>
    <string name="tracking_notification_text">Currently tracking your route</string>
    <string name="whatIsOdo">The odometer is an instrument that indicates the total distance traveled by a vehicle</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_calculator">Trip Calculator</string>
    <string name="distance_title">Distance:</string>
    <string name="fuel_used_title">Fuel used:</string>
	<string name="hint_brand">Brand</string>
	<string name="hint_model">Model</string>
	<string name="dialog_leave_while_tracking_title">Cancel tracking</string>
	<string name="dialog_leave_while_tracking">If you leave, the tracking will be canceled.</string>
	<string name="leave_tracking">Abort tracking</string>
	<string name="stay_and_track">Keep tracking</string>
	<string name="required_fields">Please enter all required fields.</string>
	
    <string-array name="week_days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Thuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="car_long_dialog">
        <item>Edit vehicle</item>
        <item>Delete vehicle</item>
    </string-array>
    <string-array name="navigation_list">
        <item>Add refill</item>
        <item>My Cars</item>
        <item>Track a trip</item>
        <item>Trip calculator</item>
        <item>History</item>
        <item>Settings</item>
        <item>Graph</item>
    </string-array>

    <string name="result">Result</string>
    <string name="Tracking">Tracking</string>
    <string name="Unit_convertion">Unit convertion</string>
    <string name="fuelPrice">Fuel price</string>
    <string name="pref_track_summmary">Choose how often the GPS should track your device</string>
    <string name="pref_unit_length_summary">Choose your prefered unit for measuring length</string>
    <string name="unit_length">Lenght unit</string>
    <string name="pref_unit_liquid_summary">Choose your prefered unit for measuring liquid</string>
    <string name="unit_liquid">Liquid unit</string>
    <string name="distance">Distance</string>
    <string name="car">Car:</string>
    <string name="start">Start</string>
    <string name="km">KM</string>
    <string name="fuel_consumption">Fuel comsumption</string>
    <string name="volume_unit">l</string>
    <string name="litre_per_mile">l/10km</string>
    <string name="gps_is_disabled">Location settings is disabled, you must enable to use this feature</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="model_req">Model*</string>
    <string name="odometer_req">Odometer*</string>
    <string name="brand_req">Brand*</string>
    <string name="cost_req">Cost*</string>
    <string name="litre_req">Litre*</string>
    <string name="set_date_req">Set date*</string>
    <string name="your_car_req">Your car*</string>
    <string name="calculate">Calculate</string>
    <string name="litre_filled">litre filled</string>

</resources>