<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imgCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleBrand"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:src="@drawable/ic_car" />
	
    <TextView
        android:id="@+id/txtVehicleBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spVehicleBrand"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="31dp"
        android:text="@string/brand" />

    <Spinner
        android:id="@+id/spVehicleBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgCar"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/txtVehicleBrand"
        android:ems="10"
        android:entries="@array/carmodels"/>

    <TextView
        android:id="@+id/txtVehicleModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleBrand"
        android:layout_below="@+id/txtVehicleBrand"
        android:layout_marginTop="31dp"
        android:text="@string/model" />

    <EditText
        android:id="@+id/editVehicleModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtVehicleModel"
        android:layout_alignLeft="@+id/spVehicleBrand"
        android:ems="10"
        android:text="@string/exampleModel" />

    <TextView
        android:id="@+id/txtTankSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleModel"
        android:layout_below="@+id/txtVehicleModel"
        android:layout_marginTop="31dp"
        android:text="@string/tankSize" />

    <EditText
        android:id="@+id/editTankSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTankSize"
        android:layout_alignLeft="@+id/editVehicleModel"
        android:ems="10"
        android:text="@string/exampleTankSize" />

    <TextView
        android:id="@+id/txtVoulumeMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTankSize"
        android:layout_alignRight="@+id/editTankSize"
        android:text="@string/volumeMeasure" />

    <TextView
        android:id="@+id/txtOdometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTankSize"
        android:layout_below="@+id/txtTankSize"
        android:layout_marginTop="31dp"
        android:text="@string/odometer" />

    <EditText
        android:id="@+id/editOdometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtOdometer"
        android:layout_alignLeft="@+id/editTankSize"
        android:ems="10"
        android:text="@string/exampleOdometer" />

    <TextView
        android:id="@+id/txtDistanceMeasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtOdometer"
        android:layout_alignRight="@+id/editOdometer"
        android:text="@string/distanceMeasure" />

    <CheckBox
        android:id="@+id/chcPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        android:layout_alignLeft="@+id/txtVehicleName"
        android:layout_marginRight="30dp"
        android:text="@string/primary" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="30dp"
        android:onClick="btnSubmit"
        android:text="@string/submit" />

</RelativeLayout>