<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/imgCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleBrand"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_car" />

    <EditText
        android:id="@+id/etVehicleBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spVehicleModel"
        android:layout_alignTop="@+id/txtVehicleBrand"
        android:ems="10"
        android:hint="@string/hint_brand"
        android:singleLine="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtVehicleBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spVehicleModel"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="35dp"
        android:text="@string/brand_req" />

    <TextView
        android:id="@+id/txtVehicleModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtVehicleBrand"
        android:layout_below="@+id/txtVehicleBrand"
        android:layout_marginTop="35dp"
        android:text="@string/model_req" />

    <Spinner
        android:id="@+id/spVehicleModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTankSize"
        android:layout_below="@+id/spVehicleBrand"
        android:ems="10" />

    <EditText
        android:id="@+id/etVehicleModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTankSize"
        android:layout_below="@+id/spVehicleBrand"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/hint_model"
        android:singleLine="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTankSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTankSize"
        android:layout_toRightOf="@+id/txtTankSize"
        android:ems="10"
        android:hint="@string/hint_tank_volume"
        android:inputType="numberDecimal"
        android:layout_marginTop="35dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editOdometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtOdometer"
        android:layout_alignLeft="@+id/editTankSize"
        android:ems="10"
        android:hint="@string/hint_odometer"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txtOdometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTankSize"
        android:layout_marginTop="35dp"
        android:text="@string/odometer_req" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/txtTankSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVehicleModel"
        android:layout_marginTop="35dp"
        android:singleLine="true"
        android:text="@string/tankSize" />

    <Spinner
        android:id="@+id/spVehicleBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etVehicleBrand"
        android:layout_below="@+id/imgCar"
        android:ems="10" />

</RelativeLayout>